// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenuButton Matches Snapshot (defaultOpen) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  padding: 4px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:hover {
  color: #003A5A;
}

.c13:visited {
  color: #602FA0;
}

.c13:not(:focus-visible) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c13:focus-visible {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #8FCEF0;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  padding: 4px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c19:not(:focus-visible) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c19:focus-visible {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c18 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c17 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c14 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c14:visited svg {
  color: #602FA0;
}

.c16 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c15 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c15:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c15:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c15:hover {
  background-color: #DBDEE1;
}

.c15:visited {
  color: #000000;
  fill: #000000;
}

.c15:visited svg {
  color: #000000;
  fill: #000000;
}

.c15[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c7:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c11 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c8:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover {
  background-color: #DBDEE1;
}

.c8[disabled],
.c8[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c12:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c12:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c12:hover {
  background-color: transparent;
}

.c12[disabled],
.c12[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
}

.c5 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c4 {
  margin-left: var(--spacing-1x);
}

.c6 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

<div
  aria-label=""
  class="c0"
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="true"
    class="c1 c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c4"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c5 c6"
    data-testid="menu-dropdownMenu"
    id="uuid2"
  >
    <ul
      aria-labelledby="firstGroup"
      class="c7"
    >
      <li>
        <a
          aria-disabled="false"
          class="c8"
          data-testid="listitem-optionA"
          href="/testA"
          tabindex="0"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                optionA
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c8"
          data-testid="listitem-optionB"
          href="/testB"
          tabindex="0"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                optionB
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c8"
          data-testid="listitem-optionC"
          href="/testC"
          tabindex="0"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                optionC
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c12"
          data-testid="listitem-optionD"
          disabled=""
          href="/testD"
          tabindex="-1"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                optionD
              </span>
            </div>
          </div>
        </a>
      </li>
    </ul>
    <ul
      aria-labelledby="secondGroup"
      class="c7"
    >
      <li>
        <a
          aria-disabled="false"
          class="c13 c14 c15"
          href="https://external-link.com/a"
          target="_blank"
        >
          <span
            class="c16"
          >
            ExternalA
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c17"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c13 c14 c15"
          href="https://external-link.com/b"
          target="_blank"
        >
          <span
            class="c16"
          >
            ExternalB
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c17"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c13 c14 c15"
          href="https://external-link.com/c"
          target="_blank"
        >
          <span
            class="c16"
          >
            ExternalC
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c17"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c19 c14 c15"
          disabled=""
          target="_blank"
        >
          <span
            class="c16"
          >
            ExternalD
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c17"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DropdownMenuButton Matches Snapshot 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c1:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  padding: 4px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:hover {
  color: #003A5A;
}

.c13:visited {
  color: #602FA0;
}

.c13:not(:focus-visible) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c13:focus-visible {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #8FCEF0;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  line-height: 1.5rem;
  padding: 4px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c19:not(:focus-visible) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c19:focus-visible {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c18 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c17 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 1rem;
  margin-left: var(--spacing-half);
  margin-right: 0;
  width: 1rem;
}

.c14 {
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c14:visited svg {
  color: #602FA0;
}

.c16 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c15 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c15:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c15:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c15:hover {
  background-color: #DBDEE1;
}

.c15:visited {
  color: #000000;
  fill: #000000;
}

.c15:visited svg {
  color: #000000;
  fill: #000000;
}

.c15[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c7:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: '';
  display: block;
  margin: 0 var(--spacing-2x);
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
}

.c11 {
  line-height: 1.25rem;
  margin: auto var(--spacing-1x) auto 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0 0 0 var(--spacing-half);
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c8:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover {
  background-color: #DBDEE1;
}

.c8[disabled],
.c8[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c12:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c12:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c12:hover {
  background-color: transparent;
}

.c12[disabled],
.c12[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c2:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2:hover,
.c2[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
}

.c5 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c4 {
  margin-left: var(--spacing-1x);
}

.c6 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

<div
  aria-label=""
  class="c0"
  data-testid="dropdown-container"
  id="uuid1"
>
  <button
    aria-expanded="false"
    class="c1 c2 c3"
    data-testid="menu-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c4"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c5 c6"
    data-testid="menu-dropdownMenu"
    hidden=""
    id="uuid2"
  >
    <ul
      aria-labelledby="firstGroup"
      class="c7"
    >
      <li>
        <a
          aria-disabled="false"
          class="c8"
          data-testid="listitem-optionA"
          href="/testA"
          tabindex="0"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                optionA
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c8"
          data-testid="listitem-optionB"
          href="/testB"
          tabindex="0"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                optionB
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c8"
          data-testid="listitem-optionC"
          href="/testC"
          tabindex="0"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                optionC
              </span>
            </div>
          </div>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c12"
          data-testid="listitem-optionD"
          disabled=""
          href="/testD"
          tabindex="-1"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <span
                class="c11"
              >
                optionD
              </span>
            </div>
          </div>
        </a>
      </li>
    </ul>
    <ul
      aria-labelledby="secondGroup"
      class="c7"
    >
      <li>
        <a
          aria-disabled="false"
          class="c13 c14 c15"
          href="https://external-link.com/a"
          target="_blank"
        >
          <span
            class="c16"
          >
            ExternalA
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c17"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c13 c14 c15"
          href="https://external-link.com/b"
          target="_blank"
        >
          <span
            class="c16"
          >
            ExternalB
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c17"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c13 c14 c15"
          href="https://external-link.com/c"
          target="_blank"
        >
          <span
            class="c16"
          >
            ExternalC
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c17"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c19 c14 c15"
          disabled=""
          target="_blank"
        >
          <span
            class="c16"
          >
            ExternalD
          </span>
          <svg
            aria-label="opens in a new tab"
            class="c17"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
          <span
            class="c18"
            data-testid="screen-reader-text"
          >
            (opens in a new tab)
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
